web/pod-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web 
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web  
  template: 
    metadata:
      labels:
        app: web  
    spec:
      containers:
      - name: web-container  
        image: gcr.io/kdt1-finalproject/njs-web:web-571a9e8c903e4bb6e5b315776ca61cbc10934016
        ports:
        - containerPort: 80
