web/web-service.yaml
apiVersion : v1
kind: Service
metadata:
  name : web
spec:
  type : LoadBalancer
  selector :
    app: web
  ports:
  - protocol: TCP
    port : 80
    targetPort: 80
